// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка найдены 2 записи 1`] = `
Object {
  "key": "Есть данные о техосмотрах",
}
`;

exports[`карточка не найдены 1`] = `
Object {
  "key": "Данные о техосмотрах не найдены",
}
`;

exports[`карточка поиск 1`] = `
Object {
  "key": "Поиск данных о техосмотрах",
}
`;

exports[`стендалоун найдены 2 записи 1`] = `
Object {
  "key": "Данные о техосмотрах",
  "value": "2 записи",
}
`;

exports[`стендалоун не найдены 1`] = `
Object {
  "key": "Данные о техосмотрах",
  "value": "Нет записей",
}
`;

exports[`стендалоун поиск 1`] = `
Object {
  "key": "Данные о техосмотрах",
  "value": "Информация появится чуть позже",
}
`;
